hard-gists/4118456/run.log
=== Docker Run Log for 4118456 ===
Started at: Mi 29. Okt 14:22:08 CET 2025

[2025-10-29 14:22:09] START: Running container for 4118456
[2025-10-29 14:22:09] SUCCESS: Container 95a56a9cf27ea2a95fe03fa373b1d0617ca969700afea628247fc77bbd7f1085 started for 4118456
=== Container logs for 4118456 ===
  File "/snippet.py", line 37
    print role
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4118456 ===
[2025-10-29 14:22:11] INFO: Container 95a56a9cf27ea2a95fe03fa373b1d0617ca969700afea628247fc77bbd7f1085 has stopped
